Fix image overflowing and some styles

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,10 +1,17 @@
 @import 'src/variables.scss';
 
+body {
+  background-image: linear-gradient(#2c2055, #a976ba, #f55da5, #fe8aba, #ffd9e8);
+}
+
 .hero {
   align-items: center;
-  background-image: linear-gradient(#2c2055, #a976ba, #f55da5, #fe8aba, #ffd9e8);
   display: flex;
   flex-direction: column;
+
+  > img {
+    max-width: 100%;
+  }
 
   &-heading {
     position: absolute;
@@ -12,14 +19,14 @@
   }
 
   &-mascot {
-    margin: 5rem 0rem 0rem;
-    max-width: 450px;
+    margin: 8rem 0rem 0rem;
   }
 
   &-title {
     color: white;
     font-family: Junegull;
     font-size: $font-xl;
+    margin-top: -1rem;
   }
 
   &-subtitle {
@@ -34,21 +41,14 @@
     margin: 1rem 0rem;
   }
 
+  .accent-card {
+    margin: 0.5rem 0;
+  }
+
   .hero-text {
     color: $primary-color;
     margin: 1rem 0rem 4rem;
     text-align: center;
     width: 70%;
-  }
-
-  .social-media {
-    display: flex;
-    justify-content: space-between;
-
-    a {
-      color: $primary-color;
-      font-size: 1.5rem;
-      margin-left: 0.5rem;
-    }
   }
 }
